move URLs to github